tests/test_data/sample_data/sample_output_files/coverity/2018.09/java/coverity.out
Error: FB.DLS_DEAD_LOCAL_STORE:
/root/scrub/test/integration_tests/java_testcase/src/testcases/CWE835_Infinite_Loop/CWE835_Infinite_Loop__do_01.java:16:
defect: Dead store to j.
Error: FB.DMI_RANDOM_USED_ONLY_ONCE:
/root/scrub/test/integration_tests/java_testcase/src/testcasesupport/IO.java:100:
defect: Random object created and used only once.
Error: FB.UWF_UNWRITTEN_PUBLIC_OR_PROTECTED_FIELD:
/root/scrub/test/integration_tests/java_testcase/src/testcasesupport/AbstractTestCaseClassIssue.java:22:
defect: Unwritten public or protected field: testcasesupport.AbstractTestCaseClassIssue.good1Object.
Error: FB.UWF_UNWRITTEN_PUBLIC_OR_PROTECTED_FIELD:
/root/scrub/test/integration_tests/java_testcase/src/testcasesupport/AbstractTestCaseClassIssue.java:44:
defect: Unwritten public or protected field: testcasesupport.AbstractTestCaseClassIssue.badObject.
